# dfft

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  docker-compose.yml  justfile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  main.yml  pr.yml  publish-crates.yml  release.yml  scan.yml
src/: args.rs  audio.rs  diff.rs  log.rs  main.rs  utils.rs
src/changes/: diff.rs  helpers.rs  listen.rs  mod.rs  print.rs  watch.rs
src/domain/: cache.rs  change.rs  diff.rs  mod.rs
src/notifs/: audio.rs  mod.rs
src/tui/: app.rs  behaviours.rs  cmd.rs  common.rs  handle.rs  integration_test.rs  mod.rs  model.rs  msg.rs  update.rs  view.rs
src/tui/static/: help.txt
src/tui/tests/: change.rs  diff.rs  general.rs  help.rs  helpers.rs  mod.rs
src/watcher/: consts.rs  helpers.rs  watch.rs
tests/: help_test.rs  run_test.rs
tests/common/: mod.rs
