[package]
name = "dfft"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
description = "dfft shows you changes to files in a directory as they happen"
keywords = [
    "cli",
    "diff",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
]

[dependencies]
anyhow = "1.0.98"
console = "0.16.0"
ignore = "0.4.23"
notify = "8.1.0"
notify-debouncer-full = "0.5.0"
ratatui = "0.29.0"
similar = { version = "2.7.0", features = [ "inline" ] }
tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread", "sync",
"time"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
insta = "1.43.1"
strip-ansi-escapes = "0.2.1"
