[package]
name = "dfft"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/dhth/dfft"
description = "see changes to files in a directory as they happen"
homepage = "https://tools.dhruvs.space/dfft/"
keywords = [
    "cli",
    "diff",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
]

[features]
default = ["sound"]
sound = ["dep:rodio"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
console = "0.16.0"
rodio = { version = "0.18", default-features = false, features = ["wav"], optional = true }
etcetera = "0.10.0"
ignore = "0.4.23"
notify = "8.1.0"
notify-debouncer-full = "0.5.0"
ratatui = "0.29.0"
similar = { version = "2.7.0", features = [ "inline" ] }
tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread", "sync",
"time"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
insta = "1.43.1"
insta-cmd = "0.6.0"
strip-ansi-escapes = "0.2.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
