[package]
name = "dfft"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/dhth/dfft"
description = "monitor changes as AI agents modify your codebase"
homepage = "https://tools.dhruvs.space/dfft/"
keywords = [
    "cli",
    "diff",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "deny.toml",
    "docker-compose.yml",
    "justfile",
]

[features]
default = ["sound"]
sound = ["dep:rodio"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
rodio = { version = "0.21.1", default-features = false, features = ["playback", "wav"], optional = true }
etcetera = "0.10.0"
ignore = "0.4.23"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
ratatui = "0.29.0"
similar = { version = "2.7.0", features = [ "inline" ] }
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
insta-cmd = "0.6.0"
strip-ansi-escapes = "0.2.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
